# zombit-vector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compile_mac.sh
benchmark/exp-repdata/: bench-wm.cpp  build-bvs.cpp  build-bwt-int.cpp  build-bwt.cpp  build-wm-level.cpp  build-wm.cpp
benchmark/exp-roaring/: bench-roaring-bvs.cpp  build-roaring-bvs.cpp
benchmark/exp-trajectories/: bench-traj.cpp  build-traj.cpp  stats-traj.cpp  traj-build-bvs.cpp
benchmark/exp1/: exp1-bench-select.cpp  exp1-bench.cpp  exp1-build.cpp
benchmark/util/: bitvector2roaring.cpp  gen-bitvectors.cpp  gen-queries.cpp
exp/: bvs-bwt.cpp  bwt.cpp  exp-wm.cpp  exp-wt.cpp  full-wm.cpp  wm-bwt.cpp  wm-query.cpp  wm.cpp  wt_huff.cpp
exp/fm-index/: build.cpp
include/: dac_vector.hpp  definitions.hpp  file.hpp  optimal_byte_partition.hpp  optimal_partition.hpp  oz_vector.hpp  partitioned_zombit_vector.hpp  partitioned_zombit_vector_sparse.hpp  prev_support_v.hpp  rec_partitioned_zombit_vector.hpp  rec_zombit_vector_v2.hpp  rec_zombit_vector_v3.hpp  succ_support_sd.hpp  succ_support_v.hpp  table_bitmap.hpp  util.hpp  zombit_vector_v2.hpp  zombit_vector_v3.hpp  zombit_vector_v4.hpp  zombit_vector_v5.hpp
include/succ-vec/: hyb_vector.hpp  rrr_vector.hpp  rrr_vector_15.hpp
src/: error.cpp  main.cpp  s.cpp  test-dac.cpp
test/: hyb.cpp  intersection.cpp  oz.cpp  partitioned_zombit.cpp  rec_partitioned_zombit.cpp  rrr.cpp  sd.cpp  zombit-s.cpp
